= master

* Add support for the route_block_args plugin to the route_csrf plugin (jeremyevans)

* Improve performance of the route_csrf plugin by using a method instead of instance_exec (jeremyevans)

* Improve performance of the route_block_args plugin by using a method instead of instance_exec (jeremyevans)

* Improve performance of the path plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the named_templates plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the multi_route plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the hooks plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the mail_processor plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the default_status plugin by directly defining the default_status method (jeremyevans)

* Improve performance of class_level_routing plugin using methods instead of instance_exec (jeremyevans)

* Do not have route_block_args plugin affect class_level_routes plugin (jeremyevans)

* Integrate internal after hook with error_handler plugin (jeremyevans)

* Improve performance of internal before and after hooks (jeremyevans)

* Improve performance by using method instead of instance_exec for main route block (jeremyevans)

* Add Roda.define_roda_method for defining instance methods instead of using instance_exec (jeremyevans)

* Include cookie_options when clearing the cookie (#162, #163) (eiko, jeremyevans)

= 3.17.0 (2019-02-15)

* Improve performance in the common case for RodaResponse#finish (jeremyevans)

* Support before hooks in the hooks plugin in the mailer and mail_processor plugins (jeremyevans)

* Allow set_layout_opts in view_options plugin to override layout if render plugin :layout option is given (jeremyevans)
